# whycon-orig

./: .gitignore
src/: CMakeLists.txt
src/common/: geometricMedian.cpp  geometricMedian.h
src/imageproc/: CCircleDetect.cpp  CCircleDetect.h
src/main/: whycon.cpp
